feat: 加入sqlite数据库作为状态存储
