# docs/swagger.yaml
@@ -1,20 +1,27 @@
 definitions:
   models.GFSAction:
     enum:
-    - GooseFSDistributeLoad
-    - GooseFSLoadMetadata
-    - GooseFSList
+    - GFSForceLoad
+    - GFSDistributeLoad
+    - GFSLoadMetadata
+    - GFSList
     type: string
+    x-enum-comments:
+      GFSDistributeLoad: 缓存数据，他的依据是 Master 上的 metadata
+      GFSForceLoad: 该步骤执行的是先去 LoadMetadata，然后再去 DistributeLoad，这样彻底更新
+      GFSLoadMetadata: 只更新元数据信息，可以更新掉cos上变更的内容
     x-enum-varnames:
-    - GooseFSDistributeLoad
-    - GooseFSLoadMetadata
-    - GooseFSList
+    - GFSForceLoad
+    - GFSDistributeLoad
+    - GFSLoadMetadata
+    - GFSList
   models.GooseFSRequest:
     properties:
       action:
         allOf:
         - $ref: '#/definitions/models.GFSAction'
-        description: '必填 0: GooseFSDistributeLoad 1: GooseFSLoadMetadata 2: GooseFSList'
+        description: '必填 0: GooseFSDistributeLoad 1: GooseFSLoadMetadata 2: GooseFSList
+          3: GooseFSForceLoad'
       path:
         description: 当 action 为 GooseFSDistributeLoad/GooseFSLoadMetadata/GooseFSList
           时必填
@@ -37,25 +44,6 @@ definitions:
         type: string
       task_name:
         type: string
-    type: object
-  models.TaskState:
-    enum:
-    - success
-    - failed
-    - running
-    type: string
-    x-enum-varnames:
-    - TaskStatusSuccess
-    - TaskStatusFailed
-    - TaskStatusRunning
-  models.TaskStatus:
-    properties:
-      data:
-        additionalProperties:
-          type: string
-        type: object
-      status:
-        $ref: '#/definitions/models.TaskState'
     type: object
 host: localhost:8080
 info:
@@ -81,9 +69,9 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: task_id
           schema:
-            $ref: '#/definitions/models.TaskStatus'
+            type: string
       summary: execute for goosefs cli
       tags:
       - GooseFS
@@ -139,6 +127,14 @@ paths:
       - description: task_name
         in: query
         name: task_name
+        type: string
+      - description: action
+        in: query
+        name: action
+        type: string
+      - description: status
+        in: query
+        name: status
         type: string
       produces:
       - application/json
